--- a/.env.example
+++ b/.env.example
@@ -1,12 +1,34 @@
 # API Keys
-OPENROUTER_API_KEY=your_openrouter_api_key_here
-SCRAPEGRAPH_API_KEY=your_scrapegraph_api_key_here
+OPENROUTER_API_KEY=your-openrouter-api-key-here
+# SCRAPEGRAPH_API_KEY=your-scrapegraph-api-key-here  # Only required when not using local scraping
 
-# Security
-JWT_SECRET=your-secret-jwt-key-here
+# Local scraping configuration
+USE_LOCAL_SCRAPING=true
+
+# LLM Configuration for Local ScrapeGraphAI
+# Option 1: OpenAI (default)
+OPENAI_API_KEY=your-openai-api-key-here
+LOCAL_LLM_MODEL=gpt-3.5-turbo
+
+# Option 2: Ollama (uncomment to use)
+# USE_OLLAMA=true
+# OLLAMA_MODEL=llama3.2
+# OLLAMA_BASE_URL=http://localhost:11434
+
+# Option 3: Other OpenAI-compatible APIs
+# LOCAL_LLM_API_KEY=your-api-key
+# LOCAL_LLM_MODEL=your-model-name
+# LOCAL_LLM_BASE_URL=https://api.your-provider.com/v1
 
 # Database
-DATABASE_URL=postgresql://user:pass@localhost:5432/scrapecraft
+DATABASE_URL=postgresql://user:pass@db:5432/scrapecraft
 
-# Redis
-REDIS_URL=redis://localhost:6379/0
+# Security
+JWT_SECRET=your-super-secret-jwt-secret-key-here
+
+# CORS - Add your frontend URLs
+CORS_ORIGINS=["http://localhost:3000", "http://localhost:80"]
+
+# ScrapeGraphAI Settings
+SCRAPEGRAPHAI_HEADLESS=true
+SCRAPEGRAPHAI_VERBOSE=false
