--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,8 @@
 .env
+/backend/app/__pycache__
+/backend/app/__pycache__
+/backend/app/api/__pycache__
+/backend/app/models/__pycache__
+/backend/app/__pycache__
+/backend/app/models/__pycache__
+/backend/app/services/__pycache__
