--- a/requirements.txt
+++ b/requirements.txt
@@ -23,11 +23,4 @@ websockets==12.0
 python-dotenv==1.0.1
 tenacity==8.5.0
 aiohttp>=3.10.0
-# Additional dependencies for ScrapeGraphAI
-# langchain-prompts is now part of langchain-core
-beautifulsoup4>=4.12.0
-lxml>=4.9.0
-html2text>=2020.1.16
-markdownify>=0.11.6
-# Optional AI enhancement for enhanced scraping
-openai>=1.0.0
+# Additional dependencies for ScrapeGraphAI that we'll install separately
